--- a/src/main/resources/templates/newDiary.html
+++ b/src/main/resources/templates/newDiary.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<title>Insert title here</title>
 </head>
+
 <body>
-	[[${year}]]年[[${month}]]月[[${day}]]日
-    新規作成
-    <form action="/diary/detail" method="post">
-        タイトル<br>
-        <input type="text" name="title"><br>
-        今日は何日？<br>
-        <input type="date" name="now_date"><br>
-        内容を書いてください<br>
-        <textarea name="content"></textarea>
-    </form> 
+	<header>
+		新規登録
+        <a href="/logout">ログアウト</a>
+	</header>
+
+	[[${date}]]<br>
+	<h3>新規作成</h3>
+	<form action="/diary" method="post">
+		タイトル<br>　
+		<input type="text" name="title" placeholder="タイトル"><br>
+		本文<br>
+		<textarea name="content" placeholder="本文"></textarea><br>
+        <button>送信</button>
+	</form>
 </body>
+
 </html>
