--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -10,8 +10,8 @@
 <body>
 	<!--    ユーザテーブルの名前を表示-->
 	<header>
-		<a href="/	logout">ログアウト</a>
-		[[${@account.user.name}]]
+		<h1>[[${@account.user.name}]]さんの日記</h1>
+		<a href="/logout">ログアウト</a>
 	</header>
 	[[${year}]]年[[${month}]]月<br>
 	<!--    [[${month -1}]]月へ-->
