--- a/src/main/resources/templates/newDiary.html
+++ b/src/main/resources/templates/newDiary.html
@@ -5,22 +5,28 @@
 	<meta charset="UTF-8">
 	<title>Insert title here</title>
 </head>
+    
+    <body>
+        <header>
+            新規登録
+            <a href="/logout">ログアウト</a>
+        </header>
+    
+        [[${date}]]<br>
+        <h3>新規作成</h3>
+        <form th:action="@{/create/diary(year=${year},month=${month},day=${day})}" method="post">
+			<input type="hidden" name="year" th:value=${year}>
+            <input type="hidden" name="month" th:value=${month}>
+            <input type="hidden" name="day" th:value=${day}>
+            タイトル<br>　
+            <input type="text" name="title" placeholder="タイトル"><br>
+            本文<br>
+            <textarea name="content" placeholder="本文"></textarea><br>
+            <button>送信</button>
 
-<body>
-	<header>
-		新規登録
-        <a href="/logout">ログアウト</a>
-	</header>
-
-	[[${date}]]<br>
-	<h3>新規作成</h3>
-	<form action="/diary" method="post">
-		タイトル<br>　
-		<input type="text" name="title" placeholder="タイトル"><br>
-		本文<br>
-		<textarea name="content" placeholder="本文"></textarea><br>
-        <button>送信</button>
-	</form>
-</body>
-
-</html>
+        </form>
+        <form action="/calendar">
+            <button>戻る</button>
+        </form>
+    </body>
+    
