--- a/src/main/resources/static/css/calendar.css
+++ b/src/main/resources/static/css/calendar.css
@@ -1,22 +1,65 @@
-.scroll {
-  margin     : auto;
-  width      : 96%;
-  font-size  : 140%;
-  line-height: 1.5em;
-  text-align : center;
-  border     : 1px solid #666;
-  color      : #000000;
-  background : #fff;
-  overflow   : hidden;
+.gnavi{
+    display: flex;
+    flex-wrap: wrap;/*スマホ表示折り返し用なのでPCのみなら不要*/
+    margin:0 0 50px 0;
+    list-style: none;
 }
-.scroll span{
-  display     : inline-block;
-  padding-left: 100%;
-  white-space : nowrap;
-  line-height : 1em;
-  animation   : scrollAnime 3s linear infinite;
+
+.gnavi li a{
+    display: block;
+    text-decoration: none;
+    color: #333;
 }
-@keyframes scrollAnime{
-    0% { transform: translateX(0)}
-  100% { transform: translateX(-100%)}
+
+.gnavi li{
+    margin-bottom:20px;
+}
+
+/*==================================================
+　5-3-9 テキストが入れ替わる
+===================================*/
+
+
+.gnavi li a{
+    /*テキストの基点とするためrelativeを指定*/
+  position: relative;
+    /*はみ出る要素を隠す*/
+  overflow: hidden;
+  padding:10px 60px;
+}
+
+.gnavi li span{
+    /*絶対配置でテキストの位置を決める*/
+  position: absolute;
+  left: 50%;
+  top:0;
+    /*アニメーションの指定*/
+  transition: all .5s;
+  transform: translate(-50%, 0);/*X方向に-50% ※中央寄せにするため*/
+  /*ブロック要素にして透過なし、テキスト折り返しなし*/  
+  display: block;
+  opacity:1;
+  white-space: nowrap;
+}
+
+/*差し替わるテキストの設定*/
+.gnavi li span:nth-child(2){
+  opacity:0;/*透過0に*/
+    transform: translate(-50%,100%);/*X方向に-50% Y方向に100%*/
+}
+
+/*hoverするとテキストが入れ替わる設定*/
+.gnavi li:hover span:nth-child(1){
+  opacity:0;/*透過0に*/
+    transform: translate(-50%,-100%);/*X方向に-50% Y方向に-100%*/
+}
+
+.gnavi li:hover span:nth-child(2){
+  opacity:1;/*不透明に*/
+  transform: translate(-50%, 0);/*X方向に-50% Y方向に0*/
+}
+/*========= レイアウトのためのCSS ===============*/
+
+.lead{
+  padding: 50px 20px;
 }
