--- a/src/main/resources/templates/createAccount.html
+++ b/src/main/resources/templates/createAccount.html
@@ -8,6 +8,9 @@
 
 <body>
 	<header>アカウント新規作成</header>
+	<ul th:if="${errorMessageList.size() > 0}" th:each ="errorMessage:${errorMessageList}">
+        <li>[[${errorMessage}]]</li>
+    </ul>
 	<form action="/create/account" method="post">
 		<table border="1">
 			<tr>
@@ -19,6 +22,10 @@
 				<td><input type="password" name="password"></td>
 			</tr>
 			<tr>
+				<th>確認用パスワード</th>
+				<td><input type="password" name="confirm-password"></td>
+			</tr>
+			<tr>
 				<th>メールアドレス</th>
 				<td><input type="email" name="email"></td>
 			</tr>
@@ -26,6 +33,9 @@
 		</table>
 		<button>登録</button>
 	</form>
+    <form action="/login">
+        <button>戻る</button>
+    </form>
 </body>
 
 </html>
