--- a/src/main/resources/templates/editDiary.html
+++ b/src/main/resources/templates/editDiary.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
+	<meta charset="UTF-8">
+	<title>Insert title here</title>
+	<link rel="stylesheet" href="/css/editDiary.css">
 </head>
+
 <body>
-    <form th:action="'/diary/'+${diary.id}+'/edit'" method="post">
-	<table border="1">
-		<tr>
-			<th>タイトル</th>
-			<td><input type="text" name="title" th:value="${diary.title}"></td>
-		</tr>
-		<tr>
-			<th>内容</th>
-			<td><input type="text" name="content" th:value="${diary.content}"></td>
-		</tr>
-	</table>
-    <input type="hidden" name = "nowDate" th:value = "${diary.nowDate}">
-    <input type="hidden" name = "userId" th:value = "${diary.userId}">
-    <button>更新</button>
-</form>
+	<form th:action="'/diary/'+${diary.id}+'/edit'" method="post">
+		タイトル<br>
+		<input type="text" name="title" th:value="${diary.title}"><br>
+		内容<br>
+		<textarea name="content" cols="140" rows="25">[[${diary.content}]]</textarea><br>
+        <input type="hidden" name="nowDate" th:value="${diary.nowDate}">
+        <input type="hidden" name="userId" th:value="${diary.userId}">
+        
+        <button>更新</button>
+    </form>
 </body>
 </html>
