--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,91 +2,96 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
-    <title>Diaryログイン</title>
-    <link rel="stylesheet" href="/css/login.css">
+	   
+	<meta charset="UTF-8">
+	   <title>Diaryログイン</title>
+	   
+	<link rel="stylesheet" href="/css/login.css">
 </head>
+
 <body>
-    <header>
-        My 日記
-    </header>
-    <div>
-        <span class="lang lang-jp">
-            <h2>ログイン</h2>
- 			<span th:if = "${error}" th:text="${error}"></span>
-            <form action="/login" method="post">
-                Eメール<br>
-                <input type="email" name="email"><br>
-                パスワード
-                <a href="/passwordReset">パスワードを忘れた場合</a><br>
-                <input type="password" name="password"><br>
-                <button>ログイン</button>
-            </form><br>
-                初めてのご利用ですか？<br>
-                <a href="/create/account">アカウント作成</a>
-        </span>
+	<header>
+		<h1>Diary</h1>
+		<h3>By Josh Adamous</h3>
+	</header>
+	    <div>
+		    <span class="lang lang-jp">
+			<span th:if="${error}" th:text="${error}"></span>
+			           <form action="/login" method="post">
+				               Eメール<br>
+				               <input type="email" name="email"><br>
+				               パスワード
+				               <a href="/passwordReset">パスワードを忘れた場合</a><br>
+				               <input type="password" name="password"><br>
+				               <button class="btn btn-border">進む</button>
+				           </form><br>
+			               初めてのご利用ですか？<br>
+			               <a href="/create/account" class="create">アカウント作成</a>
+			       </span>
 
-        <span class="lang lang-en" style="display: none;">
-            <h2>Sign In</h2>
-            <form action="/login" method="post">
-                Email<br>
-                <input type="email" name="email"><br>
-                Password
-                <a href="/passwordReset">Forgot Password</a><br>
-                <input type="password" name="password"><br>
-                <button>Login</button>
-            </form><br>
-                New user?<br>
-                <a href="/create/account">Create an account</a>
-        </span>
-
-
-        <span class="lang lang-zh" style="display: none;">
-            <h2>登录</h2>
-            <form action="/login" method="post">
-                电子邮件<br>
-                <input type="email" name="email"><br>
-                密码
-                <a href="/passwordReset">忘记密码</a><br>
-                <input type="password" name="password"><br>
-                <button>登录</button>
-            </form><br>
-                初次使用吗？<br>
-                <a href="/create/account">创建帐号</a>
-        
-        </span>
-        <div>
-            <select onchange="changeLanguage(this.value)">
-                <option value="jp">日本語</option>
-                <option value="en">English</option>
-                <option value="zh">中文</option>
-            </select>
-        </div>
+		       <span class="lang lang-en" style="display: none;">
+			           <h2>Sign In</h2>
+			           <form action="/login" method="post" class="form">
+				               Email<br>
+				               <input type="email" name="email"><br>
+				               Password
+				               <a href="/passwordReset">Forgot Password</a><br>
+				               <input type="password" name="password"><br>
+				               <button>Login</button>
+				           </form><br>
+			               New user?<br>
+			               <a href="/create/account">Create an account</a>
+			       </span>
 
 
+		       <span class="lang lang-zh" style="display: none;">
+			           <h2>登录</h2>
+			           <form action="/login" method="post">
+				               电子邮件<br>
+				               <input type="email" name="email"><br>
+				               密码
+				               <a href="/passwordReset">忘记密码</a><br>
+				               <input type="password" name="password"><br>
+				               <button>登录</button>
+				           </form><br>
+			               初次使用吗？<br>
+			               <a href="/create/account">创建帐号</a>
+			       
+			       </span>
+		       <div>
+			           <select onchange="changeLanguage(this.value)">
+				               <option value="jp">日本語</option>
+				               <option value="en">English</option>
+				               <option value="zh">中文</option>
+				           </select>
+			       </div>
 
 
-        <script>
-            function changeLanguage(lang) {
-                var elements = document.getElementsByClassName('lang');
-                for (var i = 0; i < elements.length; i++) {
-                    elements[i].style.display = 'none';
-                }
 
-                var langElement = document.getElementsByClassName('lang-' + lang)[0];
-                if (langElement) {
-                    langElement.style.display = '';
-                }
-            }
-        </script>
 
-        <script>
-            document.addEventListener("DOMContentLoaded", function () {
-                changeLanguage('jp');
-            });
-        </script>
-    </div>
+		       
+		<script>
+			function changeLanguage(lang) {
+				var elements = document.getElementsByClassName('lang');
+				for (var i = 0; i < elements.length; i++) {
+					elements[i].style.display = 'none';
+				}
+
+				var langElement = document.getElementsByClassName('lang-' + lang)[0];
+				if (langElement) {
+					langElement.style.display = '';
+				}
+			}
+		</script>
+
+		       
+		<script>
+			document.addEventListener("DOMContentLoaded", function () {
+				changeLanguage('jp');
+			});
+		</script>
+		   
+	</div>
 </body>
 
 </html>
-
