--- a/src/main/resources/static/css/calendar.css
+++ b/src/main/resources/static/css/calendar.css
@@ -3,6 +3,7 @@ body {
 			background-color: #f5f5f5;
 			margin: 0;
 			padding: 0;
+			
 		}
 
 		header {
@@ -10,6 +11,10 @@ body {
 			color: #fff;
 			padding: 10px;
 			text-align: center;
+			-ms-writing-mode: tb-rl;
+			writing-mode: vertical-rl;
+			padding: 30px;
+}
 		}
 
 		h1 {
@@ -73,3 +78,9 @@ body {
 		button:active {
 			background-color: #222;
 		}
+.detail{
+	-ms-writing-mode: tb-rl;
+			writing-mode: vertical-rl;
+			padding: 30px;
+			 text-orientation: upright;
+}
