--- a/src/main/resources/templates/calendar.html
+++ b/src/main/resources/templates/calendar.html
@@ -12,6 +12,9 @@
 		<h1>[[${@account.user.name}]]さんの日記</h1>
 		<a href="/logout">ログアウト</a>
 	</header>
+	<a href="all/diary">日記一覧へ</a>
+	
+	
 	[[${year}]]年[[${month}]]月<br>
 	<a th:href="@{/calendar(id=${(previd != null ? previd : 0) - 1})}">前の月</a>
 	<a th:href="@{/calendar(id=${(nextid != null ? nextid : 0) + 1})}">次の月</a>
