--- a/src/main/resources/templates/detailDiary.html
+++ b/src/main/resources/templates/detailDiary.html
@@ -14,13 +14,13 @@
 		<p>内容:<br>
 		[[${diary.content}]]</p>
 	</div>
-		<table class="detail">
-		<tr>
-			<th>日付</th>
-			<th>気候</th>
-			<th>タイトル</th>
-		</tr>
-	</table>
+<!--		<table class="detail">-->
+<!--		<tr>-->
+<!--			<th>日付</th>-->
+<!--			<th>気候</th>-->
+<!--			<th>タイトル</th>-->
+<!--		</tr>-->
+<!--	</table>-->
 <!--	<table border="1">-->
 <!--		<tr>-->
 <!--			<th>タイトル</th>-->
