--- a/src/main/resources/static/css/diaryDetail.css
+++ b/src/main/resources/static/css/diaryDetail.css
@@ -2,6 +2,8 @@ body{
   -ms-writing-mode: tb-rl;
   writing-mode: vertical-rl;
   padding: 30px;
+  font-family: "MS Mincho", serif; /* テキストのフォントを明朝体に設定 */
+	background-color: #f2ece6;
 }
 h1 {
   font-size: 30px;
@@ -76,6 +78,12 @@ p:before{
 .button{
 	display: flex;
 	justify-content: center;
+	text-align: center;
+			margin-top: 30px;
+			position: fixed;
+			bottom: 20px;
+			left: 50%;
+			transform: translateX(-50%);
 	
 	
 }
