--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,8 +11,8 @@
 
 <body>
 	<header>
-		<h1>Diary</h1>
-		<h3>By Josh Adamous</h3>
+		<h1>日記を残そう</h1>
+		<h3>By 伊藤　成昭</h3>
 	</header>
 	    <div>
 		    <span class="lang lang-jp">
