--- a/src/main/resources/templates/newDiary.html
+++ b/src/main/resources/templates/newDiary.html
@@ -29,16 +29,17 @@
 		<input type="hidden" name="month" th:value=${month}>
 		<input type="hidden" name="day" th:value=${day}>
 		タイトル<br>
-		<div th:contenteditable="true" class="vertical-input" name="title" placeholder="タイトル">
+<!--		<div th:contenteditable="true" class="vertical-input" name="title" placeholder="タイトル">-->
 
-			<p></p>
-		</div>
+<!--			<p></p>-->
+<!--		</div>-->
+i	<input type = "text" name ="title">
 		内容<br>
-		<div contenteditable="true" class="vertical-textarea" name="content">
+<!--		<div contenteditable="true" class="vertical-textarea" name="content">-->
 
-			<p></p>
-		</div>
-
+<!--			<p></p>-->
+<!--		</div>-->
+	<input type = "text" name ="content">
 		本日の気候<br>
 		<input type="text" name="weather" placeholder="天気"><br>
 
