--- a/src/main/resources/static/css/calendar.css
+++ b/src/main/resources/static/css/calendar.css
@@ -10,8 +10,8 @@
             padding: 10px;
             color: #fff; /* ヘッダーのテキストの色を設定 */
             -ms-writing-mode: tb-rl;
-/*            writing-mode: vertical-rl;*/
-            margin auto 0 0 0;
+            writing-mode: vertical-rl;
+            margin 0 0 0 auto;
         }
 
         h3 {
