--- a/src/main/resources/templates/detailDiary.html
+++ b/src/main/resources/templates/detailDiary.html
@@ -10,40 +10,25 @@
 <body>
 	<div class="note">
 		<h1>題名:
-		[[${diary.title}]]</h1>
+			[[${diary.title}]]</h1>
 		<p>内容:<br>
-		[[${diary.content}]]</p>
+			[[${diary.content}]]</p>
 	</div>
-<!--		<table class="detail">-->
-<!--		<tr>-->
-<!--			<th>日付</th>-->
-<!--			<th>気候</th>-->
-<!--			<th>タイトル</th>-->
-<!--		</tr>-->
-<!--	</table>-->
-<!--	<table border="1">-->
-<!--		<tr>-->
-<!--			<th>タイトル</th>-->
-<!--			<td>[[${diary.title}]]</td>-->
-<!--		</tr>-->
-<!--		<tr>-->
-<!--			<th>内容</th>-->
-<!--			<td>[[${diary.content}]]</td>-->
-<!--		</tr>-->
-		<input type="hidden" name="year" th:value=${year}>
-		<input type="hidden" name="month" th:value=${month}>
-		<input type="hidden" name="day" th:value=${day}>
-<!--	</table>-->
+
+	<input type="hidden" name="year" th:value=${year}>
+	<input type="hidden" name="month" th:value=${month}>
+	<input type="hidden" name="day" th:value=${day}>
+
 	<div class="button">
-	<form th:action="'/diary/'+${diary.id}+'/edit'" method="get">
-		<button class="distorted-circle1">編集</button>
-	</form>
-	<form th:action="'/diary/'+${diary.id}+'/delete'" method="post">
-		<button class="distorted-circle2">削除</button>
-	</form>
-	<form action="/calendar">
-		<button class="distorted-circle3">戻る</button>
-	</form>
+		<form th:action="'/diary/'+${diary.id}+'/edit'" method="get">
+			<button class="distorted-circle1">編集</button>
+		</form>
+		<form th:action="'/diary/'+${diary.id}+'/delete'" method="post">
+			<button class="distorted-circle2">削除</button>
+		</form>
+		<form action="/calendar" method="get">
+			<button class="distorted-circle3">戻る</button>
+		</form>
 	</div>
 	<a href="/logout">ログアウト</a>
 </body>
