--- a/src/main/resources/static/css/calendar.css
+++ b/src/main/resources/static/css/calendar.css
@@ -1,38 +1,73 @@
- body {
-            font-family: "MS Mincho", serif; /* テキストのフォントを明朝体に設定 */
-            background-color: #f2ece6; /* 背景色を設定 */
-           
-        }
+header{
+	height:20%;
+	width:100%;
+	background-color:#96514d;
+	text-align:center;
+}
 
-        header {
-            text-align: right; /* ヘッダーのテキストを右揃えにする */
-            background-color: #c6b8af; /* ヘッダーの背景色を設定 */
-            padding: 10px;
-            color: #fff; /* ヘッダーのテキストの色を設定 */
-            -ms-writing-mode: tb-rl;
-            writing-mode: vertical-rl;
-            margin 0 0 0 auto;
-        }
+.link{
+	display:flex;
+}
 
-        h3 {
-            text-align: right; 
-        }
 
-        form {
-            text-align: right; 
-            background-color: #fff; 
-            padding: 20px;
-            border-radius: 5px; 
-            margin: 0 auto; 
-            max-width: 500px; 
-        }
+h1{
+	font-family: serif;
+	font-size: 45px;
+	
+}
 
-        button {
-            float: right; 
-            margin-top: 10px;
-        }
+/* テーブル全体のスタイル */
+table {
+  width: 80%;
+  margin: 0 auto; 
+  border-collapse: collapse;
+  font-family: serif;
+  font-size: 14px;
+}
 
-        textarea {
-            width: 100%;
-            height: 100px;
-        }
+/* セルのスタイル */
+td {
+  width: 50px;
+  height: 50px;
+  padding: 5px;
+  text-align: center;
+  border: 1px solid #ccc;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+/* ボタンのスタイル */
+.buttonNew {
+  width: 100px;
+  height: 30px;
+  background-color: #a58f86;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  color: #333;
+  font-family: "Arial", sans-serif;
+  font-size: 12px;
+  cursor: pointer;
+  font-family: serif;
+}
+
+.buttonEdit{
+  width: 100px;
+  height: 30px;
+  background-color: #a1a46d;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  color: #333;
+  font-family: "Arial", sans-serif;
+  font-size: 12px;
+  cursor: pointer;
+  font-family: serif;
+}
+/* リンクのスタイル */
+a {
+  color: #333;
+  text-decoration: none;
+  font-family: serif;
+}
+
+/* ページ全体のスタイル */
