--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,55 +1,29 @@
+header{
+	-webkit-writing-mode: vertical-rl;
+	-ms-writing-mode: tb-rl;
+	writing-mode: vertical-rl;
+	height:40%;
+	width:100%;
+}
+
+
  h1 {
-      -ms-writing-mode: tb-rl;
-      writing-mode: vertical-rl;
-      padding: 30px;
-      margin-right: 0;
-      margin-left: auto;
+      -webkit-text-orientation: upright;
+  	　text-orientation: upright;
       font-family: serif;
       text-orientation: upright;
+      padding:30px 80px 0px 0px;
+      font-size:50px;
     }
     
-    h3 {
-      -ms-writing-mode: tb-rl;
-      writing-mode: vertical-rl;
-      padding: 30px;
-      margin-right: 50px;
-      margin-left: auto;
-      font-family: serif;
-      text-orientation: upright;
-    }
     
     form {
       font-family: serif;
     }
     
-    header {
-      width: 100%;
-      height: 350px;
-      background-color: #fff;
-      background-image: radial-gradient(closest-side, transparent 98%, #c44e37 99%),
-                       radial-gradient(closest-side, transparent 98%, #c44e37 99%);
-      background-size: 80px 80px;
-      background-position: 0 0, 40px 40px;
-    }
-    
-    button {
-      display: inline-block;
-      padding: 10px 20px;
-      background-color: #FFCCCC;
-      border: none;
-      color: #000000;
-      font-size: 16px;
-      text-align: center;
-      text-decoration: none;
-      cursor: pointer;
-      border-radius: 5px;
-      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-      transition: background-color 0.3s ease;
-    }
-    
-    button:hover {
-      background-color: #FF9999;
-    }
+    input{
+		width:200px;
+	}
     
     .create {
       font-family: serif;
