--- a/src/main/resources/static/css/diaryDetail.css
+++ b/src/main/resources/static/css/diaryDetail.css
@@ -3,7 +3,8 @@ body{
   writing-mode: vertical-rl;
   padding: 30px;
   font-family: "MS Mincho", serif; /* テキストのフォントを明朝体に設定 */
-	background-color: #f2ece6;
+  background-image: url("https://img.freepik.com/free-photo/white-zen-sand-background-in-peace-concept_53876-126533.jpg?size=626&ext=jpg&ga=GA1.1.1244428762.1685267429&semt=ais");
+　background-size: cover;	
 }
 h1 {
   font-size: 30px;
