--- a/src/main/resources/templates/createAccount.html
+++ b/src/main/resources/templates/createAccount.html
@@ -4,86 +4,106 @@
 <head>
 	<meta charset="UTF-8">
 	<title>新規登録</title>
-	<style>
-		body {
-			font-family: Arial, sans-serif;
-			background-color: #f5f5f5;
-			margin: 0;
-			padding: 0;
-		}
+	
+	<link rel="stylesheet" href="/css/createAccount.css">
 
-		header {
-			background-color: #333;
-			color: #fff;
-			padding: 10px;
-			text-align: center;
-		}
-
-		form {
-			margin: 20px auto;
-			width: 300px;
-		}
-
-		table {
-			width: 100%;
-			border-collapse: collapse;
-			margin-bottom: 10px;
-		}
-
-		th, td {
-			padding: 8px;
-			border: 1px solid #ccc;
-		}
-
-		button {
-			padding: 10px;
-			background-color: #333;
-			color: #fff;
-			border: none;
-			cursor: pointer;
-		}
-
-		ul {
-			color: red;
-			margin-bottom: 10px;
-		}
-
-		li {
-			margin-bottom: 5px;
-		}
-	</style>
 </head>
 
 <body>
-	<header>アカウント新規作成</header>
-	<ul th:if="${errorMessageList.size() > 0}" th:each="errorMessage:${errorMessageList}">
-        <li>[[${errorMessage}]]</li>
-    </ul>
-	<form action="/create/account" method="post">
-		<table border="1">
-			<tr>
-				<th>名前</th>
-				<td><input type="text" name="name"></td>
-			</tr>
-			<tr>
-				<th>パスワード</th>
-				<td><input type="password" name="password"></td>
-			</tr>
-			<tr>
-				<th>確認用パスワード</th>
-				<td><input type="password" name="confirm-password"></td>
-			</tr>
-			<tr>
-				<th>メールアドレス</th>
-				<td><input type="email" name="email"></td>
-			</tr>
+	<header>
+		<h1>アカウント新規作成</h1>
+	</header>
+	
+	<div>
+		<span class="lang lang-jp">
+			<ul th:if="${errorMessageList.size() > 0}" th:each="errorMessage:${errorMessageList}">
+				<li>[[${errorMessage}]]</li>
+			</ul>
 
-		</table>
-		<button>登録</button>
-	</form>
-    <form action="/login">
-        <button>戻る</button>
-    </form>
+			<form action="/create/account" method="post">
+				<table>
+					<tr>
+						<th>名前</th>
+						<td><input type="text" name="name"></td>
+					</tr>
+					<tr>
+						<th>パスワード</th>
+						<td><input type="password" name="password"></td>
+					</tr>
+					<tr>
+						<th>確認用パスワード</th>
+						<td><input type="password" name="confirm-password"></td>
+					</tr>
+					<tr>
+						<th>メールアドレス</th>
+						<td><input type="email" name="email"></td>
+					</tr>
+				</table>
+				<button>登録</button>
+			</form>
+			<form action="/login">
+				<button>戻る</button>
+			</form>
+		</span>
+
+		<span class="lang lang-en" style="display: none;">
+			<ul th:if="${errorMessageList.size() > 0}" th:each="errorMessage:${errorMessageList}">
+				<li>[[${errorMessage}]]</li>
+			</ul>
+
+			<form action="/create/account" method="post">
+				<table>
+					<tr>
+						<th>Name</th>
+						<td><input type="text" name="name"></td>
+					</tr>
+					<tr>
+						<th>Password</th>
+						<td><input type="password" name="password"></td>
+					</tr>
+					<tr>
+						<th>Confirm Password</th>
+						<td><input type="password" name="confirm-password"></td>
+					</tr>
+					<tr>
+						<th>Email</th>
+						<td><input type="email" name="email"></td>
+					</tr>
+				</table>
+				<button>Sign Up</button>
+			</form>
+			<form action="/login">
+				<button>Back</button>
+			</form>
+		</span>
+
+		<div>
+			<select onchange="changeLanguage(this.value)">
+				<option value="jp">日本語</option>
+				<option value="en">English</option>
+			</select>
+		</div>
+	</div>
+
+	<script>
+		function changeLanguage(lang) {
+			var elements = document.getElementsByClassName('lang');
+			for (var i = 0; i < elements.length; i++) {
+				elements[i].style.display = 'none';
+			}
+
+			var langElement = document.getElementsByClassName('lang-' + lang)[0];
+			if (langElement) {
+				langElement.style.display = '';
+			}
+		}
+	</script>
+
+	<script>
+		document.addEventListener("DOMContentLoaded", function () {
+			changeLanguage('jp');
+		});
+	</script>
 </body>
 
 </html>
