--- a/src/main/resources/templates/newPassword.html
+++ b/src/main/resources/templates/newPassword.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>パスワード再設定</title>
+	<link rel="stylesheet" href="/css/newPassword.css">
 </head>
 <body>
 	<form action="/setPassword" method="post">
