--- a/src/main/resources/templates/passwordReset.html
+++ b/src/main/resources/templates/passwordReset.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>パスワード再設定</title>
-	
+	<link rel="stylesheet" href="/css/passwordReset.css">
 </head>
 
 <body>
